--- a/src/system-plugins/input-controller/public/webcomponents/orov-inputs-list.html
+++ b/src/system-plugins/input-controller/public/webcomponents/orov-inputs-list.html
@@ -32,7 +32,9 @@
         },
         registerEmitterHanlders: function(emitter){
           var self = this;
-
+          emitter.on('InputController.registeredCommand',function(command){
+            self.push('commands',command);
+          });
         },
       })
     })();
