--- a/src/plugins/example/public/webcomponents/example.html
+++ b/src/plugins/example/public/webcomponents/example.html
@@ -3,7 +3,7 @@
   <style>
   </style>
   <template>
-    <div><span on-click='handleClick'>Example:</span><span>{{Name}}</span></div>
+    <div><span on-click='handleClick'>{{__('Example')}}</span>:<span>{{Name}}</span></div>
   </template>
   <script>
     (function() {
