--- a/src/plugins/rovpilot/public/webcomponents/orov-thrustfactor.html
+++ b/src/plugins/rovpilot/public/webcomponents/orov-thrustfactor.html
@@ -11,7 +11,7 @@
   }
   </style>
   <template>
-    <label for="tf">Thrust Factor</label>
+    <label for="tf">{{__('Thrust Factor')}}</label>
     <span id='tf'>{{thrustFactor}}</span>
 
   </template>
