--- a/src/plugins/serial-monitor/public/webcomponents/orov-serial-monitor.html
+++ b/src/plugins/serial-monitor/public/webcomponents/orov-serial-monitor.html
@@ -3,11 +3,11 @@
   <style>
   </style>
   <template>
-    <input id='sendbox' type='text'>{{sendData}}</input><button on-click='send'>Send</button>
+    <input id='sendbox' type='text'>{{sendData}}</input><button on-click='send'>{{__('Send')}}</button>
     <textarea id="serialMonitorList">
     </textarea>
-    <button on-click='start'>Start</button>
-    <button on-click='stop'>Stop</button>
+    <button on-click='start'>{{__('Start')}}</button>
+    <button on-click='stop'>{{__('Stop')}}</button>
 
   </template>
   <script>
