--- a/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
+++ b/src/plugins/thrusters2x1/public/webcomponents/orov-thrusters2x1-motortest.html
@@ -11,7 +11,7 @@
 <div id="motordiags" style="width: 80%">
  <template is="dom-repeat" items="{{motors}}">
    <div class="control-group">
-      <label class="control-label" for="{{item.name}}">{{item.name}} Motor</label>
+      <label class="control-label" for="{{item.name}}">{{__(item.name)}} {{__('Motor')}}</label>
       <paper-slider pin="true" min="-1" max="1" step="0.001" id="{{item.name}}" on-immediate-value-change='MotorPercentChange'></paper-slider>
       <span>[[item.percent]]</span>
       <div>
