--- a/src/plugins/telemetry/public/webcomponents/orov-telemetry-monitor.html
+++ b/src/plugins/telemetry/public/webcomponents/orov-telemetry-monitor.html
@@ -167,6 +167,7 @@
           }
         },
         handleDescendantEvent: function(e) {
+          var self=this;
           if (e.type == 'click' && e.eventPhase == Event.CAPTURING_PHASE && e.srcElement.nodeName=='INPUT'){
             this.expandedTelemetry[e.srcElement.id]=e.srcElement.checked;
           }
@@ -184,7 +185,7 @@
               var titles = this.titles;
               if(this.titles[telemetry_name] === undefined) {
                 this.define(telemetry_name,function(data){
-                  titles[data.name]=__(data.description) || '';
+                  titles[data.name]=self.__(data.description) || '';
                 });
               }
             }
