--- a/src/plugins/input-configurator/public/configurator.html
+++ b/src/plugins/input-configurator/public/configurator.html
@@ -50,11 +50,11 @@
       },
       commandsChanged: function() {
         var self = this;
+        self.selectedItem = undefined;
         $(this.$.commands).find('tr').each(function(){
           $(this).css('cursor','pointer').hover(
               function(){ 
                   $(this).addClass('info');
-                   
               },  
               function(){ 
                   $(this).removeClass('info'); 
